src/test/resources/wacc_examples/invalid/syntaxErr/imports/fileNameNoQuotes.wacc
begin
    include test1.wacc
    skip
end